feat: created export/import DDL and added security